# QtApps

./: CMakeLists.txt  README.md  conanfile.py  conanfile1.txt
app/: CMakeLists.txt  main.cpp
app/analog_clock/: CMakeLists.txt  main.cpp
app/elc_test/: CMakeLists.txt  assistant.cpp  assistant.h  findfiledialog.cpp  findfiledialog.h  main.cpp  mainwindow.cpp  mainwindow.h  textedit.cpp  textedit.h
app/test_work_2/: CMakeLists.txt  main.cpp
